[package]
name = "rust-cursive-tasks"
authors = ["William A. Morris <william@morriswa.org>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "0.20"
serde = "*"
serde_derive = "*"
serde_json = "*"
dirs = "*"